# ai.deploy.box

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  README.rst  README_cn.md  server.py  set_env.sh  setup.cfg  setup.py
config/: aidb-config.yaml  mnn_config.yaml  ncnn_config.yaml  onnx_config.yaml  openvino_config.yaml  paddle_config.yaml  tnn_config.yaml  tokenizer.json
extra/scripts/: aidb_example.go  aidb_test.go
libs/: README.md
libs/mac/: libMNN-1.x.dylib  libMNN.dylib  libiomp5.dylib  libncnn.1.dylib  libncnn.dylib  plugins.xml
libs/mac/libonnxruntime.1.12.0.dylib.dSYM/Contents/: Info.plist
libs/mac/openvino/: intel64
lua/: CMakeLists.txt  wrapper.cpp  wrapper.h
proto/: onnx.pb.cc  onnx.pb.h
python/: CMakeLists.txt  wrapper.cpp
python/wrapper/: AiDBAnimeGan.hpp  AiDBFace3DDFA.hpp  AiDBFaceDetect.hpp  AiDBFaceLandMark.hpp  AiDBFaceParsing.hpp  AiDBMobileStyleGan.hpp  AiDBMobileVit.hpp  AiDBMoveNet.hpp  AiDBPPOcr.hpp  AiDBWrapper.hpp  AiDBYoloV7.hpp  AiDBYoloV8.hpp  AiDBYoloX.hpp
sample-wasm/: CMakeLists.txt  aidb_samples.cpp  extra.h  movenet.h  pfpld.h  scrfd.h  tddfa.h  yolov7.h  yolov8.h  yolox.h
sample-wasm/models/: ch_ppocr_det_v3.id.h  ch_ppocr_det_v3.mem.h  ch_ppocr_mobile_v2.0_cls.id.h  ch_ppocr_mobile_v2.0_cls.mem.h  ch_ppocr_rec_v3.id.h  ch_ppocr_rec_v3.mem.h  movenet.id.h  movenet.mem.h  pfpld.id.h  pfpld.mem.h  scrfd_500m_kps.id.h  scrfd_500m_kps.mem.h  tddfa_v2_mb05_bfm_head_base.id.h  tddfa_v2_mb05_bfm_head_base.mem.h  tddfa_v2_mb05_bfm_head_dense.id.h  tddfa_v2_mb05_bfm_head_dense.mem.h  yolov7_tiny.id.h  yolov7_tiny.mem.h  yolov8n.id.h  yolov8n.mem.h  yolox_nano.id.h  yolox_nano.mem.h  yolox_tiny.id.h  yolox_tiny.mem.h
samples/: AnimeGan.cpp  CMakeLists.txt  FaceDetect.cpp  FaceDetectWith3DDFA.cpp  FaceDetectWithLandmark.cpp  FaceParsing.cpp  MobileSAM.cpp  MobileStyleGan.cpp  MobileViT.cpp  Movenet.cpp  PPOcr.cpp  StableDiffusionControlNetImg2Img.cpp  StableDiffusionInpainting.cpp  ThinPlateSplineMotionModel.cpp  YoloV7.cpp  YoloV8.cpp  YoloX.cpp
source/: CMakeLists.txt  aidb_jni.cpp
source/backend/mnn/: MNNEngine.cpp  MNNEngine.hpp  MNNParameter.cpp  MNNParameter.hpp
source/backend/ncnn/: CustomLayer.hpp  NCNNEngine.cpp  NCNNEngine.hpp  NCNNParameter.cpp  NCNNParameter.hpp
source/backend/onnxruntime/: ONNXEngine.cpp  ONNXEngine.hpp  ONNXParameter.cpp  ONNXParameter.hpp
source/backend/openvino/: OPVEngine.cpp  OPVEngine.hpp  OPVParameter.cpp  OPVParameter.hpp
source/backend/paddle_lite/: PPLiteEngine.cpp  PPLiteEngine.hpp  PPLiteParameter.cpp  PPLiteParameter.hpp
source/backend/tnn/: TNNEngine.cpp  TNNEngine.hpp  TNNParameter.cpp  TNNParameter.hpp
source/c_api/: aidb_c_api.cpp  aidb_c_api.h
source/core/: AIDBData.h  AIDBDefine.h  BaseInput.hpp  Common.hpp  CoreConfig.hpp  Engine.hpp  Interpreter.cpp  Interpreter.h  Parameter.hpp  StatusCode.h
source/preprocess/: ImageInput.cpp  ImageInput.hpp
source/server/: aidb_flow.cpp  aidb_flow.hpp  aidb_server.cpp  aidb_server.hpp  reflect.cpp  reflect.hpp
source/server/wrapper/: AiDBAnimeGanNode.cpp  AiDBAnimeGanNode.hpp  AiDBBaseNode.hpp  AiDBFace3DDFANode.cpp  AiDBFace3DDFANode.hpp  AiDBFaceDetectNode.cpp  AiDBFaceDetectNode.hpp  AiDBFaceLandMarkNode.cpp  AiDBFaceLandMarkNode.hpp  AiDBFaceParsingNode.cpp  AiDBFaceParsingNode.hpp  AiDBMobileVitNode.cpp  AiDBMobileVitNode.hpp  AiDBMoveNetNode.cpp  AiDBMoveNetNode.hpp  AiDBNode.hpp  AiDBPPCLsNode.cpp  AiDBPPCLsNode.hpp  AiDBPPCRNNNode.cpp  AiDBPPCRNNNode.hpp  AiDBPPDBNetNode.cpp  AiDBPPDBNetNode.hpp  AiDBWrapper.hpp  AiDBYoloV7Node.cpp  AiDBYoloV7Node.hpp  AiDBYoloV8Node.cpp  AiDBYoloV8Node.hpp  AiDBYoloXNode.cpp  AiDBYoloXNode.hpp
source/utility/: Logging.h  Utility.cpp  Utility.h  center_weight.h  face_align.h  labels.h  log.cpp  log.h  rasterize.h  rasterize_kernel.cpp  triangles.hpp
tools/: aidbCommon.cmake
