[metadata]
name = pyAiDB
version = 1.0.0
author = Hulk Wang
author_email = 593063075@qq.com
url = https://github.com/TalkUHulk/ai.deploy.box
description = Wrapping AiDB for Python
long_description = file: README.rst
keywords = mnn, vision
license = BSD 3-Clause License
classifiers =
   Development Status :: 3 - Alpha
   Environment :: Linux Environment
   Intended Audience :: Developers
   License :: OSI Approved :: Apache Software License
   Natural Language :: English
   Operating System :: OS Independent
   Programming Language :: Python :: 3.5
   Programming Language :: Python :: 3.6
   Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8


[options]
zip_safe = False

